deploy/home/root/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kustomize.toolkit.fluxcd.io/force: Enabled
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: home-root
          image: ticklethepanda/home-root:latest
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
              add:
                - NET_BIND_SERVICE
          volumeMounts:
            - mountPath: /tmp/
              name: nginx-temp
      volumes:
        - emptyDir: {}
          name: nginx-temp
