deploy/home/root/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    # the port that this service should serve on
    - port: 80
      targetPort: 8080
