deploy/home/root/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`home.ticklethepanda.co.uk`)
      middlewares:
        - name: auth
          namespace: home
      services:
        - name: home-root-service
          namespace: home
          port: 80
    - kind: Rule
      match: Host(`odinbot.ticklethepanda.co.uk`) && Path(`/main.css`)
      services:
        - name: home-root-service
          namespace: home
          port: 80
